Change Dashboard Index view title

--- a/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Dashboard.DashboardIndexViewModel
 
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Volvox.Helios";
 }
 
 <partial name="./Partials/_DashboardHeader" model="@Model.UserGuilds.Select(g => g.Guild)" />
