- Redesign of Module enabler - Add Devextreme Nuget Package

--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home";
 }
 
-<header class="home-header mb-4">
+<header class="home-header valign mb-4">
     <div class="container">
         <div class="col-md-6 image-shadow">
             <img src="https://volvox.tech/images/large/volvox-combination-mark.png" alt="Volvox logo" class="img-fluid" />
