--- a/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
@@ -26,6 +26,7 @@
                         <i class="fas fa-cog"></i>
                     </a>
                 }
+
                 @*<a href="#" class="text-volvox mr-2" dropdown-toggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-ellipsis-h ml-auto mr-3"></i>
                 </a>
@@ -54,6 +55,7 @@
                     <p class="card-text">
                         <partial name="./Partials/_DashboardCard" model="@uG.Guild" />
                     </p>
+                    <div id="pie"></div>
                 </div>
             </div>
         </div>
@@ -79,5 +81,63 @@
                 el.removeClass('far').addClass('fas');
         }
 
+        $(function () {
+            $("#pie").dxPieChart({
+                palette: "bright",
+                dataSource: dataSource,
+                title: "Chat analytics",
+                legend: {
+                    orientation: "horizontal",
+                    itemTextPosition: "right",
+                    horizontalAlignment: "left",
+                    verticalAlignment: "bottom",
+                    columnCount: 4
+                },
+                series: [{
+                    argumentField: "country",
+                    valueField: "medals",
+                    label: {
+                        visible: true,
+                        font: {
+                            size: 16
+                        },
+                        connector: {
+                            visible: true,
+                            width: 0.5
+                        },
+                        position: "columns",
+                        customizeText: function (arg) {
+                            return arg.valueText + " (" + arg.percentText + ")";
+                        }
+                    }
+                }]
+            });
+        });
+
+        var dataSource = [{
+            country: "USA",
+            medals: 110
+        }, {
+            country: "China",
+            medals: 100
+        }, {
+            country: "Russia",
+            medals: 72
+        }, {
+            country: "Britain",
+            medals: 47
+        }, {
+            country: "Australia",
+            medals: 46
+        }, {
+            country: "Germany",
+            medals: 41
+        }, {
+            country: "France",
+            medals: 40
+        }, {
+            country: "South Korea",
+            medals: 31
+        }];
     </script>
 }
