--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -9,15 +9,30 @@
 <div class="row">
     <div class="col-md-12">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-
-            <div style="display: flex;" class="form-group">
-                <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
-                <label class="switch" />
-                <input asp-for="Enabled" type="checkbox" />
-                <div class="slider round"></div>
-                <span asp-validation-for="Enabled" class="text-danger"></span>
+            <div class="col-12">
+                <div class="row border border-gray2 rounded">
+                    <div class="col-md-9 pt-3 pb-3">
+                        <h4>Remembot Module</h4>
+                        <p class="mb-0 text-volvox">
+                            Completely manage all reminders for your bot.
+                        </p>
+                    </div>
+                    <div class="col-md-3 valign">
+                        <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
+                            <label for="enabledBtn" class="btn pr-4 pl-4 @(Model.Enabled ? "active" : "border-gray2 bg-white text-gray2")">
+                                On
+                                <input id="enabledBtn" type="radio" name="Enabled" class="d-none" value="true">
+                            </label>
+                            <label for="disabledBtn" class="btn pr-4 pl-4 @(Model.Enabled ? "border-gray2 bg-white text-gray2" : "active")">
+                                Off
+                                <input id="disabledBtn" type="radio" name="Enabled" class="d-none" value="false">
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
+            
+            <div asp-validation-summary="All" class="text-danger"></div>
 
             <h4>Stream Announcer</h4>
             <div class="form-group">
@@ -50,8 +65,13 @@
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-success" />
+            <div class="col-12">
+                <div class="row mt-4">
+                    <span asp-validation-summary="Enabled" class="text-danger"></span>
+                    <div class="ml-auto">
+                        <button type="submit" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Save</button>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
@@ -82,5 +102,10 @@
                     $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages);
                 });
             });
+
+        $('input:not(".active")').click((e) => {
+            $(e.currentTarget).parent().parent().find('.active').toggleClass('active border-gray2 bg-white text-gray2');
+            $(e.currentTarget).parent().toggleClass('active border-gray2 bg-white text-gray2');
+        });
     </script>
 }
