--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
@@ -9,8 +9,7 @@
 
 else
 {
-
-    <div class="w-100 d-flex">
+    <div class="w-100 d-flex mt-3 mb-3">
         <div>
             <span class="material-badge mr-2"><strong>@Model.Details.MemberCount</strong> Members</span>
             <span class="material-badge mr-2"><strong>@Model.Details.Roles.Count</strong> Roles</span>
