--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -46,8 +46,8 @@
     </div>
 
     <div class="col-12 mt-5">
-        <h3 class="text-center">Current Modules</h3>
-        <hr class="col-7">
+        <h3 class="text-left">Current Modules</h3>
+        <hr class="mr-auto text-left ml-0">
         <h4 class="text-volvox underline-left mt-4 mt-5">Stream Announcer</h4>
         <p>
             Announce to a specific channel when a user starts streaming to Twitch
